--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,26 +1,91 @@
-.App {
-  text-align: center;
+.title{
+    text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
+.error-text{
+    text-align: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.btn-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.App-link {
-  color: #09d3ac;
+.App{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    margin: 40px 0;
 }
 
-.pr-list{
-  list-style-type: none
+.App::after{
+    background-color: #50C1F5;
+    content: '';
+    position: absolute;
+    right: calc(50% - 2px);
+    width: 4px;
+    height: 100%;
+}
+
+.pr-info{
+  font-size: 15px;
+}
+
+.date-text{
+  font-size: 20px;
+}
+
+.pr-list-container{
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 30px;
+    position: relative;
+    margin: 10px -27px;
+    width: 50%;
+}
+
+.pr-list-container:nth-child(odd){
+    align-self: flex-end;
+    justify-content: flex-start;
+    padding-left: 30px;
+    padding-right: 0;
+}
+
+.pr-list-container:nth-child(odd) .pr-list-content{
+    text-align: left;
+    align-items: flex-start;
+}
+
+.pr-list-content{
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+    border-radius: 5px;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    /*padding: 15px;*/
+    position: relative;
+    /*width: 400px;*/
+    width: wrap;
+    padding: 25px 50px;
+    max-width: 70%;
+    text-align: right;
+}
+
+.pr-list-content .circle{
+    background-color: #fff;
+    border: 3px solid #50C1F5;
+    border-radius: 50%;
+    position: absolute;
+    top: calc(50% - 10px);
+    right: -40px;
+    width: 20px;
+    height: 20px;
+    z-index: 100;
+}
+
+.pr-list-container:nth-child(odd) .pr-list-content .circle{
+    right: auto;
+    left: -40px;
 }
